chore(backend): Added Maven-based backend linting (#67, RDFA-459)