@@ -17,6 +17,9 @@
 
 package org.rdfarchitect.api.dto;
 
+import static org.assertj.core.api.AssertionsForClassTypes.*;
+import static org.junit.jupiter.api.Assertions.*;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -35,32 +38,29 @@ import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
-import static org.assertj.core.api.AssertionsForClassTypes.*;
-import static org.junit.jupiter.api.Assertions.*;
-
 @SpringBootTest
 class ClassUMLAdaptedMapperTest {
 
-    @Autowired
-    private ClassUMLAdaptedMapper classMapper;
+    @Autowired private ClassUMLAdaptedMapper classMapper;
 
     private CIMClassUMLAdapted cimClass;
     private ClassUMLAdaptedDTO classDTO;
 
     @BeforeEach
     void setUp() {
-        cimClass = new CIMClassUMLAdapted(
-                  CIMClass.builder()
-                          .uuid(UUID.randomUUID())
-                          .uri(new URI("http://example.com#TestClass"))
-                          .label(new RDFSLabel("TestClass", "en"))
-                          .build()
-        );
-        classDTO = ClassUMLAdaptedDTO.builder()
-                                     .uuid(cimClass.getUuid())
-                                     .prefix("http://example.com#")
-                                     .label("TestClass")
-                                     .build();
+        cimClass =
+                new CIMClassUMLAdapted(
+                        CIMClass.builder()
+                                .uuid(UUID.randomUUID())
+                                .uri(new URI("http://example.com#TestClass"))
+                                .label(new RDFSLabel("TestClass", "en"))
+                                .build());
+        classDTO =
+                ClassUMLAdaptedDTO.builder()
+                        .uuid(cimClass.getUuid())
+                        .prefix("http://example.com#")
+                        .label("TestClass")
+                        .build();
     }
 
     @Nested
@@ -71,46 +71,67 @@ class ClassUMLAdaptedMapperTest {
             var dto = classMapper.toDTO(cimClass);
 
             assertAll(
-                      () -> assertThat(dto).isNotNull(),
-                      () -> assertThat(dto.getUuid()).isEqualTo(cimClass.getUuid()),
-                      () -> assertThat(dto.getPrefix()).isEqualTo("http://example.com#"),
-                      () -> assertThat(dto.getLabel()).isEqualTo("TestClass"),
-                      () -> assertThat(dto.getSuperClass()).isNull(),
-                      () -> assertThat(dto.getComment()).isNull(),
-                      () -> assertThat(dto.getStereotypes()).isEqualTo(Collections.emptyList()),
-                      () -> assertThat(dto.getAttributes()).isEqualTo(Collections.emptyList()),
-                      () -> assertThat(dto.getEnumEntries()).isEqualTo(Collections.emptyList()),
-                      () -> assertThat(dto.getAssociationPairs()).isEqualTo(Collections.emptyList()),
-                      () -> assertThat(dto.getBelongsToCategory()).isNull()
-                     );
+                    () -> assertThat(dto).isNotNull(),
+                    () -> assertThat(dto.getUuid()).isEqualTo(cimClass.getUuid()),
+                    () -> assertThat(dto.getPrefix()).isEqualTo("http://example.com#"),
+                    () -> assertThat(dto.getLabel()).isEqualTo("TestClass"),
+                    () -> assertThat(dto.getSuperClass()).isNull(),
+                    () -> assertThat(dto.getComment()).isNull(),
+                    () -> assertThat(dto.getStereotypes()).isEqualTo(Collections.emptyList()),
+                    () -> assertThat(dto.getAttributes()).isEqualTo(Collections.emptyList()),
+                    () -> assertThat(dto.getEnumEntries()).isEqualTo(Collections.emptyList()),
+                    () -> assertThat(dto.getAssociationPairs()).isEqualTo(Collections.emptyList()),
+                    () -> assertThat(dto.getBelongsToCategory()).isNull());
         }
 
         @Test
         void toDTO_allCoreFields() {
-            cimClass.setSuperClass(new RDFSSubClassOf(new URI("http://example.com/superClass#SuperClass"), new RDFSLabel("SuperClass")));
-            cimClass.setComment(new RDFSComment("This is a test class", new URI("http://www.w3.org/2001/XMLSchema#String")));
-            cimClass.setStereotypes(List.of(new CIMSStereotype("Entsoe"), new CIMSStereotype("http://iec.ch/TC57/NonStandard/UML#concrete"), new CIMSStereotype("Operation")));
-            cimClass.setBelongsToCategory(new CIMSBelongsToCategory(new URI("http://example.com/Category#TestCategory"), new RDFSLabel("TestCategory", "en"), UUID.randomUUID()));
+            cimClass.setSuperClass(
+                    new RDFSSubClassOf(
+                            new URI("http://example.com/superClass#SuperClass"),
+                            new RDFSLabel("SuperClass")));
+            cimClass.setComment(
+                    new RDFSComment(
+                            "This is a test class",
+                            new URI("http://www.w3.org/2001/XMLSchema#String")));
+            cimClass.setStereotypes(
+                    List.of(
+                            new CIMSStereotype("Entsoe"),
+                            new CIMSStereotype("http://iec.ch/TC57/NonStandard/UML#concrete"),
+                            new CIMSStereotype("Operation")));
+            cimClass.setBelongsToCategory(
+                    new CIMSBelongsToCategory(
+                            new URI("http://example.com/Category#TestCategory"),
+                            new RDFSLabel("TestCategory", "en"),
+                            UUID.randomUUID()));
 
             var dto = classMapper.toDTO(cimClass);
-            var belongsToCategoryDTO = new BelongsToCategoryDTO(
-                      "http://example.com/Category#",
-                      "TestCategory",
-                      cimClass.getBelongsToCategory().getUuid());
+            var belongsToCategoryDTO =
+                    new BelongsToCategoryDTO(
+                            "http://example.com/Category#",
+                            "TestCategory",
+                            cimClass.getBelongsToCategory().getUuid());
 
             assertAll(
-                      () -> assertThat(dto.getUuid()).isEqualTo(cimClass.getUuid()),
-                      () -> assertThat(dto.getPrefix()).isEqualTo("http://example.com#"),
-                      () -> assertThat(dto.getLabel()).isEqualTo("TestClass"),
-                      () -> assertThat(dto.getSuperClass().getPrefix()).isEqualTo("http://example.com/superClass#"),
-                      () -> assertThat(dto.getSuperClass().getLabel()).isEqualTo("SuperClass"),
-                      () -> assertThat(dto.getComment()).isEqualTo("This is a test class"),
-                      () -> assertThat(dto.getStereotypes()).isEqualTo(List.of("Entsoe", "http://iec.ch/TC57/NonStandard/UML#concrete", "Operation")),
-                      () -> assertThat(dto.getAttributes()).isEqualTo(Collections.emptyList()),
-                      () -> assertThat(dto.getEnumEntries()).isEqualTo(Collections.emptyList()),
-                      () -> assertThat(dto.getAssociationPairs()).isEqualTo(Collections.emptyList()),
-                      () -> assertThat(dto.getBelongsToCategory()).isEqualTo(belongsToCategoryDTO)
-                     );
+                    () -> assertThat(dto.getUuid()).isEqualTo(cimClass.getUuid()),
+                    () -> assertThat(dto.getPrefix()).isEqualTo("http://example.com#"),
+                    () -> assertThat(dto.getLabel()).isEqualTo("TestClass"),
+                    () ->
+                            assertThat(dto.getSuperClass().getPrefix())
+                                    .isEqualTo("http://example.com/superClass#"),
+                    () -> assertThat(dto.getSuperClass().getLabel()).isEqualTo("SuperClass"),
+                    () -> assertThat(dto.getComment()).isEqualTo("This is a test class"),
+                    () ->
+                            assertThat(dto.getStereotypes())
+                                    .isEqualTo(
+                                            List.of(
+                                                    "Entsoe",
+                                                    "http://iec.ch/TC57/NonStandard/UML#concrete",
+                                                    "Operation")),
+                    () -> assertThat(dto.getAttributes()).isEqualTo(Collections.emptyList()),
+                    () -> assertThat(dto.getEnumEntries()).isEqualTo(Collections.emptyList()),
+                    () -> assertThat(dto.getAssociationPairs()).isEqualTo(Collections.emptyList()),
+                    () -> assertThat(dto.getBelongsToCategory()).isEqualTo(belongsToCategoryDTO));
         }
     }
 
@@ -122,41 +143,75 @@ class ClassUMLAdaptedMapperTest {
             var mappedCIMClass = classMapper.toCIMObject(classDTO);
 
             assertAll(
-                      () -> assertThat(mappedCIMClass.getUuid()).isEqualTo(classDTO.getUuid()),
-                      () -> assertThat(mappedCIMClass.getUri()).isEqualTo(new URI("http://example.com#TestClass")),
-                      () -> assertThat(mappedCIMClass.getLabel()).isEqualTo(new RDFSLabel("TestClass", "en")),
-                      () -> assertThat(mappedCIMClass.getSuperClass()).isNull(),
-                      () -> assertThat(mappedCIMClass.getStereotypes()).isEqualTo(List.of()),
-                      () -> assertThat(mappedCIMClass.getAttributes()).isEqualTo(Collections.emptyList()),
-                      () -> assertThat(mappedCIMClass.getEnumEntries()).isEqualTo(Collections.emptyList()),
-                      () -> assertThat(mappedCIMClass.getAssociationPairs()).isEqualTo(Collections.emptyList()),
-                      () -> assertThat(mappedCIMClass.getComment()).isNull(),
-                      () -> assertThat(mappedCIMClass.getBelongsToCategory()).isNull()
-                     );
+                    () -> assertThat(mappedCIMClass.getUuid()).isEqualTo(classDTO.getUuid()),
+                    () ->
+                            assertThat(mappedCIMClass.getUri())
+                                    .isEqualTo(new URI("http://example.com#TestClass")),
+                    () ->
+                            assertThat(mappedCIMClass.getLabel())
+                                    .isEqualTo(new RDFSLabel("TestClass", "en")),
+                    () -> assertThat(mappedCIMClass.getSuperClass()).isNull(),
+                    () -> assertThat(mappedCIMClass.getStereotypes()).isEqualTo(List.of()),
+                    () ->
+                            assertThat(mappedCIMClass.getAttributes())
+                                    .isEqualTo(Collections.emptyList()),
+                    () ->
+                            assertThat(mappedCIMClass.getEnumEntries())
+                                    .isEqualTo(Collections.emptyList()),
+                    () ->
+                            assertThat(mappedCIMClass.getAssociationPairs())
+                                    .isEqualTo(Collections.emptyList()),
+                    () -> assertThat(mappedCIMClass.getComment()).isNull(),
+                    () -> assertThat(mappedCIMClass.getBelongsToCategory()).isNull());
         }
 
         @Test
         void toCIM_allCoreFields() {
-            classDTO.setSuperClass(new SuperClassDTO("http://example.com/superClass#", "SuperClass"));
+            classDTO.setSuperClass(
+                    new SuperClassDTO("http://example.com/superClass#", "SuperClass"));
             classDTO.setComment("This is a test class");
-            classDTO.setStereotypes(List.of("Entsoe", "http://iec.ch/TC57/NonStandard/UML#concrete", "Operation"));
+            classDTO.setStereotypes(
+                    List.of("Entsoe", "http://iec.ch/TC57/NonStandard/UML#concrete", "Operation"));
 
             var mappedCIMClass = classMapper.toCIMObject(classDTO);
 
             assertAll(
-                      () -> assertThat(mappedCIMClass.getUuid()).isEqualTo(classDTO.getUuid()),
-                      () -> assertThat(mappedCIMClass.getUri()).isEqualTo(new URI("http://example.com#TestClass")),
-                      () -> assertThat(mappedCIMClass.getLabel()).isEqualTo(new RDFSLabel("TestClass", "en")),
-                      () -> assertThat(mappedCIMClass.getSuperClass().getUri()).isEqualTo(new URI("http://example.com/superClass#SuperClass")),
-                      () -> assertThat(mappedCIMClass.getComment()).isEqualTo(new RDFSComment("This is a test class", new URI("http://www.w3.org/2001/XMLSchema#String"))),
-                      () -> assertThat(mappedCIMClass.getStereotypes()).isEqualTo(List.of(new CIMSStereotype("Entsoe"), new CIMSStereotype("http://iec.ch/TC57/NonStandard/UML" +
-                                                                                                                                                     "#concrete"),
-                                                                                          new CIMSStereotype("Operation"))),
-                      () -> assertThat(mappedCIMClass.getAttributes()).isEqualTo(Collections.emptyList()),
-                      () -> assertThat(mappedCIMClass.getEnumEntries()).isEqualTo(Collections.emptyList()),
-                      () -> assertThat(mappedCIMClass.getAssociationPairs()).isEqualTo(Collections.emptyList()),
-                      () -> assertThat(mappedCIMClass.getBelongsToCategory()).isNull()
-                     );
+                    () -> assertThat(mappedCIMClass.getUuid()).isEqualTo(classDTO.getUuid()),
+                    () ->
+                            assertThat(mappedCIMClass.getUri())
+                                    .isEqualTo(new URI("http://example.com#TestClass")),
+                    () ->
+                            assertThat(mappedCIMClass.getLabel())
+                                    .isEqualTo(new RDFSLabel("TestClass", "en")),
+                    () ->
+                            assertThat(mappedCIMClass.getSuperClass().getUri())
+                                    .isEqualTo(new URI("http://example.com/superClass#SuperClass")),
+                    () ->
+                            assertThat(mappedCIMClass.getComment())
+                                    .isEqualTo(
+                                            new RDFSComment(
+                                                    "This is a test class",
+                                                    new URI(
+                                                            "http://www.w3.org/2001/XMLSchema#String"))),
+                    () ->
+                            assertThat(mappedCIMClass.getStereotypes())
+                                    .isEqualTo(
+                                            List.of(
+                                                    new CIMSStereotype("Entsoe"),
+                                                    new CIMSStereotype(
+                                                            "http://iec.ch/TC57/NonStandard/UML"
+                                                                    + "#concrete"),
+                                                    new CIMSStereotype("Operation"))),
+                    () ->
+                            assertThat(mappedCIMClass.getAttributes())
+                                    .isEqualTo(Collections.emptyList()),
+                    () ->
+                            assertThat(mappedCIMClass.getEnumEntries())
+                                    .isEqualTo(Collections.emptyList()),
+                    () ->
+                            assertThat(mappedCIMClass.getAssociationPairs())
+                                    .isEqualTo(Collections.emptyList()),
+                    () -> assertThat(mappedCIMClass.getBelongsToCategory()).isNull());
         }
     }
 }
